[package]
name = "sark0y_tam_rst"
version = "1.9.137"
edition = "2021"
authors = ["Evgeney Knyazhev (SarK0Y) <sark0y@protonmail.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/SarK0Y/TAM_RUSTy.git"
description = "Automation tool to make Console/Terminal more comfy. Have a great day, Dear User 💯❤️"
crate_type = ["staticlib"]
keywords = ["automation", "file-manager", "exotic", "ergonomics", "console"]
categories = ["filesystem", "command-line-utilities"]
[dependencies]
cli-table = "0.4.7"
once_cell = "1.18.0"
threadpool = "1.8.1"
chrono = "0.4.31"
substring = "1.4.5"
colored = "2.0.4"
num-traits = "0.2.17"
#c-gull = "0.15.31"
libc = "0.2.152" #"0.2.149"
termios = "=0.3.3"
termion = "3.0.0"
#close_file ="0.1.0"
ansi_term = "0.12.1"
os_pipe = "1.1.5"
console = "0.15.6"
ctrlc = "1.0.2"
#gag = "1.0.0"
terminal_size = "0.3.0"
crossterm="0.27.0"
regex = "=1.10.3"
Mademoiselle_Entropia = {path = "/tst/mae", version = "1.11.1", optional = true}
syn = "2.0.66"
#rustix = "0.38.28"
#cached = "0.48.0"
[features]
in_dbg =[]
dbg0=[]
mae =["Mademoiselle_Entropia"]
